# ParkSim

./: .gitignore  README.md  mpclab_base_nodes.py  obstacle_types.py  pytypes.py  setup.py  starting_positions.json  translate_coordinates.py
carla-ros-bridge/: run_parksim.sh
carla-ros-bridge/src/ros-bridge/carla_parksim/: CMakeLists.txt  package.xml  setup.ppyy  setup.py
carla-ros-bridge/src/ros-bridge/carla_parksim/include/launch/: carla_parksim.launch.py
carla-ros-bridge/src/ros-bridge/carla_parksim/launch/: carla_parksim.launch.py
carla-ros-bridge/src/ros-bridge/carla_parksim/src/: carla_parksim.py  carla_utils.py
carla-ros-bridge/src/ros-bridge/carla_spawn_objects/: generate_json.py  setup.py  starting_positions.json
carla_PythonAPI/examples/: bare_world.py
intent_predict/cnn/: losses.py  network.py  test.ipynb  train.py  train_Img2Kpt.py  utils.py  visualize_model.ipynb
intent_predict/cnn/data-processing/: feature_label_vis.ipynb  training_datagen.py  utils.py
intent_predict/cnnV2/: cross_validate.py  evaluate.py  network.py  network_visualization.ipynb  predict_speed_test.py  prediction_api_testing.ipynb  predictor.py  train.py  utils.py
intent_predict/cnnV2/data_processing/: create_dataset.py  create_timeseries_dataset.py  data_experimentation.ipynb  utils.py
intent_predict/irl/: apprenticeship.ipynb  gradient_descent.ipynb  optimizer.py
intent_predict/irl/data-processing/: test_irl_feature_label.ipynb  training_datagen.py  utils.py
intent_predict/irl/data_processing/: test_irl_feature_label.ipynb  training_datagen.py  utils.py
python/: setup.py
python/parksim/: base_node.py  controller_types.py  obstacle_types.py  pytypes.py  vehicle_types.py
python/parksim/agents/: abstract_agent.py  rule_based_stanley_vehicle.py  rule_based_stanley_vehicle_v2.py  rule_based_vehicle.py
python/parksim/controller/: dynamic_model.py  mpc_controller.py  stanley_controller.py  test_controller.py
python/parksim/energy_calculator/: sim_real_statistics.ipynb
python/parksim/intent_predict/cnn/: cross_validate.py  evaluate.py  intent_sampler.py  losses.py  model_analysis.ipynb  network.py  network_speed_test.py  predict_speed_test.py  predictor.py  train.py  (+3 more)
python/parksim/path_planner/: hobca_planner.py  offline_maneuver.py  offset_offline_maneuver.py  planner.py  spline.py  visualize_offline_maneuver.py
python/parksim/route_planner/: a_star.py  graph.py  test_planner.ipynb
python/parksim/simulator/: rule_based_simulator.py  rule_based_simulator_v2.py
python/parksim/spot_detector/: test_detector.ipynb
python/parksim/spot_nn/: feature_generator.py  losses.csv  spot_nn.py
python/parksim/trajectory_predict/: README.md  count_dataset_size.py  evaluate.py  experiment.ipynb  train.py  utils.py
python/parksim/trajectronpp/: dataset.py  train.py
python/parksim/utils/: ControllerResult.csv  controller_parser.py  generate_profiles.py  get_corners.py  interpolation.py  rectangle_to_circles.py
python/parksim/visualizer/: offline_visualizer.py  realtime_visualizer.py
route_planner/: a_star.py  graph.py  test_planner.ipynb
spot_detector/: detector.py  test_detector.ipynb
typedef/: obstacle_types.py  pytypes.py  vehicle_types.py
utils/: interpolation.py
visualizer/: offline_visualizer.py
workspace/: build_interfaces.sh  run_ros.sh  run_rosbridge.sh  source_overlay.sh
workspace/src/interfaces/: CMakeLists.txt  package.xml
workspace/src/parksim/: CMakeLists.txt  package.xml
workspace/src/parksim/config/: global_params.yaml  simulator.yaml  vehicle.yaml  visualization.yaml
workspace/src/parksim/launch/: parksim.launch.py  vehicle.launch.py
workspace/src/parksim/msg/: EncoderMsg.msg  PredictionMsg.msg  VehicleActuationMsg.msg  VehicleInfoMsg.msg  VehicleStateMsg.msg
workspace/src/parksim/src/: simulator_node.py  test_vehicle_node.py  translator_node.py  vehicle_node.py  visualizer_node.py
workspace/src/parksim/srv/: OccupancySrv.srv
workspace/src/ros/: package.xml  setup.cfg  setup.py
workspace/src/rosbridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
(+105 files in other folders)
