<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_parksim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ethanp1138@gmail.com">Ethan Pang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

    <!-- ROS 2 DEPENDENCIES-->
  <depend>rclpy</depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
